@@ -2003,3 +2003,6 @@ some systems, and may have been source of other errors as well.
 
 Improved ambient extrapolation to avoid zero values.  Actual
 threshold set to 5% of recorded value.
+
+Changed anisotropic Gaussian and Ashikhmin models so that
+illegal orientation vectors are dealt with more gracefully.
